@@ -1,6 +1,7 @@
 Revision history for Datahub-Factory-VKC
 
 {{$NEXT}}
+    - changed: moved TMS::Index to a dedicated KMSKA namespace
     - added: missing dependency DBD::mysql
 
 0.9  2017-06-08 11:27:39 CEST
